RESOLVED FIXED 261310
VTTRegion::setScroll should ignore assignment of an invalid string instead of throwing SyntaxError
https://bugs.webkit.org/show_bug.cgi?id=261310
Summary VTTRegion::setScroll should ignore assignment of an invalid string instead of...
Kueno
Reported 2023-09-07 19:47:41 PDT
The spec that VTTRegion::setScroll throws a SyntaxError in dead code has been removed at https://github.com/w3c/webvtt/pull/28, and now it should ignore assignment of an invalid string. WebKit is failing the corresponding WPT: https://wpt.fyi/results/webvtt/api/VTTRegion/scroll.html?label=experimental&label=master&aligned&q=webvtt
Attachments
Kueno
Comment 1 2023-09-07 19:50:55 PDT
EWS
Comment 2 2023-09-09 04:59:30 PDT
Committed 267828@main (8de0edf59961): <https://commits.webkit.org/267828@main> Reviewed commits have been landed. Closing PR #17567 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-09-09 05:00:14 PDT
Note You need to log in before you can comment on or make changes to this bug.