VTTRegion::setScroll should ignore assignment of an invalid string instead of throwing SyntaxError https://bugs.webkit.org/show_bug.cgi?id=261310

Reviewed by Eric Carlson.

The spec that VTTRegion::setScroll throws a SyntaxError in dead code
has been removed at https://github.com/w3c/webvtt/pull/28,
and now it should ignore assignment of an invalid string.

WebKit is failing the corresponding WPT:
https://wpt.fyi/results/webvtt/api/VTTRegion/scroll.html?label=experimental&label=master&aligned&q=webvtt

* LayoutTests/imported/w3c/web-platform-tests/webvtt/api/VTTRegion/constructor-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/webvtt/api/VTTRegion/scroll-expected.txt:
* LayoutTests/media/track/regions-webvtt/vtt-region-constructor-expected.txt:
* Source/WebCore/html/track/VTTRegion.cpp:
(WebCore::VTTRegion::setScroll):
* Source/WebCore/html/track/VTTRegion.h:

Canonical link: https://commits.webkit.org/267828@main